--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css1.css">
+		<link rel="stylesheet" type="text/css" href="styles/2-header.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="styles/2-footer.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="styles/2-common.css" media="screen">
 		<meta charset="utf-8">
-		<title>Holberton AirBnB task0</title>
+		<title>Holberton AirBnB</title>
 	</head>
 	<body>
 		<header>
     		</header>
-    		<article>
-			<section>…</section>
-    		</article>
-    		<aside></aside>
     		<footer>
 			<p>Holberton School</p>
 		</footer>
