--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -6,16 +6,13 @@
 		<link rel="stylesheet" type="text/css" href="./styles/3-header.css">
 		<link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
 		<!--icon-->
-		<link rel="favicon" type="image/png" href="./images/icon.png">
+		<link rel="icon" type="image/png" href="./images/icon.png">
         	<meta charset="utf-8">
         	<title>Holberton AirBnB</title>
 	</head>
 	<body>
 		<header>
     		</header>
-    		<article>
-    		</article>
-    		<aside></aside>
     		<footer>
 			<p>Holberton School</p>
 		</footer>
