--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
         <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
         <!--icon-->
-        <link rel="icon" type="image/png" href="./icon.png">
+        <link rel="icon" type="image/png" href="images/icon.png">
         <meta charset="utf-8">
-        <title>Holberton AirBnB task0</title>
+        <title>Holberton AirBnB</title>
     </head>
     <body>
         <header></header>
